--- a/Source/AndreasSteffensenCV/AndreasSteffensenCV.Server/Properties/launchSettings.json
+++ b/Source/AndreasSteffensenCV/AndreasSteffensenCV.Server/Properties/launchSettings.json
@@ -11,13 +11,9 @@
   "profiles": {
     "http": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
+      "dotnetRunMessages": true
       //"launchBrowser": true,
       //"launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5074",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.SpaProxy"
       }
     }
   }
