--- a/steff_web/package.json
+++ b/steff_web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "steff-web",
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -23,6 +24,7 @@
     "@angular/ssr": "^17.0.6",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.3.6",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
   },
@@ -33,6 +35,9 @@
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
+    "eslint": "^8.55.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
