--- a/pageV.1/package.json
+++ b/pageV.1/package.json
@@ -13,5 +13,9 @@
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "path": "^0.12.7"
   }
 }
